--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
+    
+    <title>Welcome to Firebase Hosting</title>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,15 +14,14 @@
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
     ></script>
-    <title>Vite + React</title>
+   
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">jeff</div>
     <script type="module" src="/src/main.jsx"></script>
     <script src="external files\jquery-3.3.1.slim.min.js"></script>
     <script src="external files\bootstrap.bundle.min.js"></script>
     <script src="contact.js"></script>
     <script src="navbar.js"></script>
-    
   </body>
 </html>
