--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/external files/font-awesome.min.css">
     <link rel="stylesheet" href="external files\font-awesome.min.css">
     <link rel="stylesheet" href="contactstyles.css" />
+    <link rel="stylesheet" href="aboutstyles.css" />
     <script
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
