favicon added and some mobile fixes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/RB.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/external files/bootstrap.min.css">
     <link rel="stylesheet" href="/external files/font-awesome.min.css">
@@ -13,7 +13,7 @@
       src="https://kit.fontawesome.com/64d58efce2.js"
       crossorigin="anonymous"
     ></script>
-    <title>Vite + React</title>
+    <title>Robert Burke Films</title>
   </head>
   <body>
     <div id="root"></div>
