--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/RB.svg" />
+  <link rel="icon" type="image/svg+xml" href="/TB.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="/external files/bootstrap.min.css">
   <link rel="stylesheet" href="/external files/font-awesome.min.css">
