--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
 <body>
   <div id="root"></div>
-  <script type="module" src="/src/main.jsx"></script>
+  <script type="module" src="/src/main.tsx"></script>
   <script src="external files\jquery-3.3.1.slim.min.js"></script>
   <script src="external files\bootstrap.bundle.min.js"></script>
-  <script src="contact.js"></script>
-  <script src="navbar.js"></script>
+  <script src="contact.ts"></script>
+  <script src="navbar.ts"></script>
 
 </body>
 
